name:                asn1-codec
version:             0.1.0
synopsis:            Encode and decode ASN.1
description:         Add a better description later
homepage:            https://github.com/andrewthad/asn1-codec
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2017 Andrew Martin
category:            web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Encode
    Recode
    TestNetwork
    Net.Snmp.Types
    Net.Snmp.Encoding
  build-depends:
      base >= 4.7 && < 5
    , integer-gmp
    , bytestring
    , contravariant
    , vector
    , pretty
    , text
    , network
  default-language:    Haskell2010

test-suite asn1-records-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
    , asn1-codec
    , test-framework
    , text
    , bytestring
    , HUnit
    , test-framework-hunit
    , aeson
    , directory
    , base16-bytestring
  other-modules:
    Internal
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/asn1-records
