name:                asn1-codec
version:             0.2.0
synopsis:            Encode and decode ASN.1
description:         Add a better description later
homepage:            https://github.com/andrewthad/asn1-codec
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2017 Andrew Martin
category:            web
build-type:          Simple
cabal-version:       >=1.10

flag TestNetwork
  description:
    There is a test network that is buildable with this package.
    .
    Enable this flag if you would look to play around with it.
  default: False
  manual: True

library
  hs-source-dirs: src
  exposed-modules:
    Language.Asn.Encoding
    Language.Asn.Decoding
    Language.Asn.ObjectIdentifier
    Language.Asn.Types
    Language.Asn.Types.Internal
    Net.Snmp.Types
    Net.Snmp.Encoding
    Net.Snmp.Decoding
    Net.Snmp.Client
  if flag(TestNetwork)
    exposed-modules:
      TestNetwork
  build-depends:
      aeson >= 1.1.2
    , base >= 4.9.1.0 && < 5
    , bytestring >= 0.10
    , containers
    , contravariant >= 1.4
    , cryptonite
    , hashable >= 1.2
    , ip >= 1.0.0 && < 2.0.0 
    , memory
    , network >= 2.6
    , pretty
    , primitive >= 0.6.4
    , stm
    , text >= 1.2
    , vector >= 0.11
  ghc-options: -O2
  default-language:    Haskell2010

test-suite asn1-records-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
    , HUnit
    , aeson
    , asn1-codec
    , base16-bytestring
    , bytestring
    , directory
    , ip
    , test-framework
    , test-framework-hunit
    , text
    , vector
  other-modules:
    Internal
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/asn1-records
